--- a/index.html
+++ b/index.html
@@ -268,6 +268,18 @@
             }
         }
 
+        @keyframes scaleUpRotate {
+            from {
+                opacity: 0;
+                transform: scale(0.5) rotate(-5deg);
+            }
+
+            to {
+                opacity: 1;
+                transform: scale(1) rotate(0);
+            }
+        }
+
         @keyframes pulse {
             from {
                 transform: scale(1);
@@ -825,13 +837,13 @@
             width: 50px;
             height: 50px;
             border-radius: 14px;
-            background: linear-gradient(135deg, #E74C3C, #C0392B);
-            border: 3px solid #A93226;
+            background: linear-gradient(135deg, #4FC3F7, #0288D1);
+            border: 3px solid #01579B;
             display: flex;
             align-items: center;
             justify-content: center;
             cursor: pointer;
-            box-shadow: 0 4px 10px rgba(231, 76, 60, .4);
+            box-shadow: 0 4px 10px rgba(2, 136, 209, .4), inset 0 2px 3px rgba(255, 255, 255, .3);
             font-size: 22px;
             transition: transform .2s
         }
@@ -1116,6 +1128,46 @@
             gap: 16px;
             margin-bottom: 16px;
             overflow-y: auto
+        }
+
+        .congrats-title {
+            font-family: 'Luckiest Guy', cursive;
+            font-size: 52px;
+            background: linear-gradient(180deg, #FFD700, #FFA500, #FF8C00);
+            background-clip: text;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            filter: drop-shadow(0 4px 8px rgba(0, 0, 0, .4));
+            margin-bottom: 5px;
+            animation: bounceIn 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            letter-spacing: 2px;
+        }
+
+        @keyframes bounceIn {
+            from {
+                opacity: 0;
+                transform: scale(0.3);
+            }
+
+            50% {
+                opacity: 0.9;
+                transform: scale(1.1);
+            }
+
+            to {
+                opacity: 1;
+                transform: scale(1);
+            }
+        }
+
+        .home-title {
+            font-family: 'Luckiest Guy', cursive;
+            font-size: 48px;
+            color: white;
+            text-shadow: 0 0 20px rgba(91, 192, 240, .5);
+            letter-spacing: 2px;
+            line-height: 1.2;
+            margin-top: 20px
         }
 
         .s-title {
@@ -1563,7 +1615,7 @@
                 <div class="load-bar">
                     <div class="load-fill" id="loadFill"></div>
                 </div>
-                <div class="splash-version">v2.5.0 • Refined Experience</div>
+                <div class="splash-version">v2.6.0 • Premium Experience</div>
             </div>
         </div>
 
@@ -1650,15 +1702,13 @@
 
             <div class="results-content"
                 style="padding: 20px; display: flex; flex-direction: column; height: 100%; overflow-y: auto; width: 100%; position: relative; z-index: 10;">
-                <div
-                    style="font-size: 40px; color: var(--gold); text-shadow: 0 4px 10px rgba(0,0,0,0.5); margin-bottom: 5px;">
-                    ¡FELICIDADES!</div>
+                <div class="congrats-title">¡FELICIDADES!</div>
                 <div class="results-title" id="resultsTitle"
-                    style="font-size: 24px; margin-bottom: 10px; opacity: 0.8;">MÍMICA
-                    PRO - RESULTADOS</div>
+                    style="font-size: 20px; margin-bottom: 10px; opacity: 0.8; font-weight: 700;">MÍMICA
+                    PRO • RESULTADOS</div>
 
                 <div class="score-box" id="resultsScoreBox">
-                    <div class="score-label" id="scoreLabel">PUNTUACIÓN TOTAL</div>
+                    <div class="score-label" id="scoreLabel">PUNTUACIÓN OBTENIDA</div>
                     <span id="finalScore">0</span>
                 </div>
 
@@ -2104,14 +2154,16 @@
                         else if (teamScoresMap[tid] === maxS) isTie = true;
                     });
 
-                    const winnerTxt = isTie ? '¡EMPATE! 🤝' : `¡GANA ${teamNamesMap[winner].toUpperCase()}! 🏆`;
+                    const winnerTxt = isTie ? '¡EMPATE! 🤝' : `¡GANA EL EQUIPO ${teamNamesMap[winner].toUpperCase()}! 🏆`;
 
-                    let compareHTML = `<div style="text-align:center; margin-bottom:15px; background: rgba(0,0,0,0.3); padding: 25px; border-radius: 30px; border: 3px solid #FFD700; animation: fadeInUp 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);">
-                        <div style="font-size:32px; font-weight:800; color:#FFD700; margin-bottom: 15px; text-shadow: 0 4px 10px rgba(0,0,0,0.5); font-family:'Luckiest Guy', cursive;">${winnerTxt}</div>
+                    let compareHTML = `<div style="text-align:center; margin-bottom:15px; background: linear-gradient(135deg, rgba(255,215,0,0.2), rgba(255,165,0,0.1)); padding: 30px 15px; border-radius: 35px; border: 4px solid #FFD700; box-shadow: 0 15px 35px rgba(255,215,0,0.3); animation: scaleUpRotate 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);">
+                        <div style="font-size:12px; color:#FFD700; font-weight:800; margin-bottom:5px; letter-spacing:3px;">RESULTADOS FINALES</div>
+                        <div style="font-size:36px; font-weight:800; color:#FFD700; margin-bottom: 20px; text-shadow: 0 4px 15px rgba(0,0,0,0.5); font-family:'Luckiest Guy', cursive; line-height:1.2;">${winnerTxt}</div>
+                        <div style="font-size:13px; color:white; font-weight:600; margin-bottom:15px; opacity:0.8;">PUNTUACIONES FINALES:</div>
                         <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:12px;">`;
 
                     teamOrder.forEach(tid => {
-                        compareHTML += `<div class="team-indicator team-${tid.toLowerCase()}" style="display:block; margin:0; padding:10px 18px; font-size: 16px !important;">${teamNamesMap[tid]}: ${teamScoresMap[tid]}</div>`;
+                        compareHTML += `<div class="team-indicator team-${tid.toLowerCase()}" style="display:block; margin:0; padding:10px 18px; font-size: 16px !important; border: 2px solid white !important;">${teamNamesMap[tid]}: ${teamScoresMap[tid]}</div>`;
                     });
 
                     compareHTML += `</div></div>`;
@@ -2190,7 +2242,7 @@
 
                 // Results
                 const resTitle = document.getElementById('resultsTitle'); if (resTitle) resTitle.innerHTML = t('resultados');
-                const scoreLabel = document.getElementById('scoreLabel'); if (scoreLabel) scoreLabel.innerHTML = t('puntuacion');
+                const scoreLabel = document.getElementById('scoreLabel'); if (scoreLabel) scoreLabel.innerHTML = 'PUNTUACIÓN OBTENIDA';
                 const btnReplay = document.getElementById('btnReplay'); if (btnReplay) btnReplay.textContent = t('volverJugar');
                 const btnMenuR = document.getElementById('btnMenuR'); if (btnMenuR) btnMenuR.textContent = t('menu');
 
